--- a/package.json
+++ b/package.json
@@ -8,12 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.3.0",
+    "@react-native-async-storage/async-storage": "^1.14.1",
+    "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-link-http": "^1.5.17",
     "expo": "~40.0.0",
+    "expo-auth-session": "~3.0.0",
+    "expo-random": "~10.0.0",
     "expo-status-bar": "~1.0.3",
+    "expo-web-browser": "^9.0.0",
+    "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
+    "jwt-decode": "^3.1.2",
     "react": "16.13.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "^0.15.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
