--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.11",
     "@auth0/auth0-react": "^1.3.0",
     "@react-native-async-storage/async-storage": "^1.14.1",
     "apollo-boost": "^0.4.9",
